--- a/index.html
+++ b/index.html
@@ -11,10 +11,16 @@
       referrerpolicy="no-referrer"
     /> -->
     <link rel="stylesheet" href="style.css" />
-    <title>My project</title>
+    <title>Movie App</title>
   </head>
   <body>
-    <h1>Project Starter</h1>
-    <script src="script.js"></script>
+    <header>
+      <form id="form">
+        <input type="text" id="search" class="search" placeholder="Search..." />
+      </form>
+    </header>
+
+    <main id="main"></main>
+    <script type="module" src="script.js"></script>
   </body>
 </html>
